# asgard

./: .bazelrc  .drone.yml  README.md  WORKSPACE  status_command.sh
app/boredbot/: README.md
app/boredbot/cmd/: BUILD.bazel  command.go  command_test.go  main.go
dd/: 2022-12-29-remote-and-cloud.md
lib/go/api/bored/: BUILD.bazel  bored_client.go  bored_client_test.go
lib/go/api/telegram/: BUILD.bazel  telegram_client.go
lib/go/api/yandex-cloud/: BUILD.bazel  iam.go  iam_test.go
lib/go/api/yandex-cloud/auth/: BUILD.bazel  iam.go  iam_test.go
lib/go/api/yandex-cloud/testdata/: test_key.json
lib/go/api/yc/: BUILD.bazel  client.go  client_test.go  common_test.go  iam.go  iam_test.go
lib/go/api/yc/testdata/: test_key.json  test_key_invalid.json  test_key_invalid_private_key.json
lib/go/debug/metadata/: BUILD.bazel  metadata.go  metadata_test.go
lib/go/debug/service/: BUILD.bazel  debug_service.go
lib/go/log/: BUILD.bazel  log.go
lib/go/test/: BUILD.bazel  suite.go
tools/: save_image_to_registry.sh
tools/cc/: BUILD
tools/config/: BUILD
yc/kubernetes/: create.sh
yc/kubernetes/ingress/: README.md  cluster-issuer.yaml  create-dns.sh  ingress-inginx.yaml
yc/kubernetes/ingress/helm/: entrypoint.sh  generator.Dockerfile
yc/namespace/boredbot/: namespace.yaml  secret.yaml  service-account.yaml  service.yaml
yc/namespace/buildbarn/: frontend.yaml  read-only-frontend.yaml  scheduler.yaml  storage.yaml  worker-ubuntu22-04.yaml
yc/namespace/buildbarn/configuration/: common.yaml  frontend.yaml  run.sh  runner-ubuntu22-04.yaml  worker-ubuntu22-04.yaml
yc/namespace/buildkit/: namespace.yaml  service.yaml  volume.yaml
yc/namespace/drone/: README.md  create-service-account.sh
yc/namespace/drone/runner/: create-registry-secret.sh  deployment.yaml  registry-secret.yaml  role.yaml
yc/namespace/drone/server/: github-secret.yaml  ingress.yaml  runner-secret.yaml  service.yaml  volume.yaml
yc/namespace/keel/: account.yaml  secret.yaml  service.yaml  volume.yaml
yc/registry/: create.sh
