load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "cmd",
    srcs = ["main.go"],
    deps = [
        "//lib/go/api/bored",
        "//lib/go/api/telegram",
        "//lib/go/debug/service",
        "//lib/go/debug/metadata",
        "//lib/go/log",
        "@com_github_go_telegram_bot_api//:go_default_library",
    ],
    visibility = ["//visibility:private"],
)

container_image(
    name = "image",
    base = "@distroless-container-image//image",
    entrypoint = ["./cmd"],
    files = [":cmd"],
)
