load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = [
        "command.go",
    ],
    deps = [
        "//lib/go/api/bored",
        "//lib/go/debug/metadata",
    ],
    importpath = "asgard/app/boredbot/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cmd",
    srcs = ["main.go"],
    deps = [
        ":lib",
        "//lib/go/api/bored",
        "//lib/go/api/telegram",
        "//lib/go/debug/service",
        "//lib/go/debug/metadata",
        "//lib/go/log",
        "@com_github_go_telegram_bot_api//:go_default_library",
    ],
    visibility = ["//visibility:private"],
)

container_image(
    name = "image",
    base = "@distroless-container-image//image",
    entrypoint = ["./cmd"],
    files = [":cmd"],
)

container_push(
    name = "push",
    image = ":image",
    format = "Docker",
    registry = "cr.yandex",
    repository = "crp1l4j9no209t82ra7l/boredbot",
    tag = "latest",
)
