load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = ["iam.go"],
    importpath = "asgard/common/api/yandex-cloud/auth",
    deps = [
        "@com_github_golang_jwt_jwt//:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "auth_test",
    srcs = ["iam_test.go"],
    embed = [":auth"],
    data = [
        "//lib/go/api/yandex-cloud:test_key",
    ],
    deps = [
        "@com_github_stretchr_testify//suite:go_default_library",
        "@com_github_golang_jwt_jwt//:go_default_library",
        "@ke_bou_monkey//:go_default_library"
    ],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "test_key",
    testonly = True,
    srcs = glob(
        ["testdata/test_key.json"],
    ),
    visibility = ["//visibility:private"],
)
